# fn-formats

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust_auto_format.yml
src/: lib.rs
tests/: badges.rs
