[package]
name = "fn-formats"
version = "0.0.4"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Format trait wrappers for Fn(&mut Formatter) -> fmt::Result"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/fn-formats"
homepage = "https://github.com/Tamschi/fn-formats/tree/v0.0.4"
documentation = "https://docs.rs/fn-formats/0.0.4"
keywords = ["fluent", "Debug", "Display", "format", "no_std"]
categories = ["value-formatting", "development-tools::debugging", "no-std"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/meta_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
travis-ci = { repository = "Tamschi/fn-formats", branch = "develop" }
is-it-maintained-issue-resolution = { repository = "Tamschi/fn-formats" }
is-it-maintained-open-issues = { repository = "Tamschi/fn-formats" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
